WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78430
Old JIT put_by_id profiling counts every put_by_id_transition as taking slow path
https://bugs.webkit.org/show_bug.cgi?id=78430
Summary
Old JIT put_by_id profiling counts every put_by_id_transition as taking slow ...
Filip Pizlo
Reported
2012-02-11 18:39:14 PST
Patch forthcoming. <
rdar://problem/10849469
>
Attachments
the patch
(2.98 KB, patch)
2012-02-11 18:49 PST
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-02-11 18:49:34 PST
Created
attachment 126664
[details]
the patch
Filip Pizlo
Comment 2
2012-02-11 19:55:26 PST
Landed in
http://trac.webkit.org/changeset/107501
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug